--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         return array;
     }
     const randomBlob = generateRandomBlob();
-    const kzg = new KZG();
+    const kzg = KZG.create();
 
     async function test() {
         console.log('Commitment1111:');
-        const commitment = await kzg.computeCommitment(randomBlob);
+        const blobs = [randomBlob];
+        const commitment = await kzg.commitmentBatch(blobs);
         console.log('Commitment:', commitment);
 
-        const blobs = [randomBlob];
-        const commitments = await kzg.computeCommitmentBatch(blobs);
+        const commitments = await kzg.computeCellProofsBatch(blobs);
         console.log('Batch Commitments:', commitments);
     }
 
