fix load worker error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>KZG SDK Test</h1>
 <script type="module">
-    import { KZG } from './dist/browser/sdk.js';
+    import { KZG } from './dist/browser/sdk.mjs';
 
     function generateRandomBlob() {
         const array = new Uint8Array(32*4096);
